[tool.poetry]
name = "pagination"
version = "0.1.0"
description = ""
authors = ["SantanaBreno <breno.lima@sou.inteli.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
fastapi-pagination = "^0.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
